--- a/site/src/pages/Auth/Auth.module.css
+++ b/site/src/pages/Auth/Auth.module.css
@@ -57,7 +57,7 @@
   align-content: center;
   justify-content: center;
   text-align: center;
-  color: #FD5750;
+  color: #d7b73f;
   font-size: 18px;
 }
 
@@ -70,7 +70,7 @@
   justify-content: center;
   text-align: center;
   text-transform: lowercase;
-  color: #78f542;
+  color: #d7b73f;
   font-size: 22px;
 }
 
@@ -219,7 +219,7 @@
 
 .githubLink a {
   font-size: 20px;
-  color: #FD5750;
+  color: #d7b73f;
   opacity: 0.7;
   transition: all 0.3s ease;
   text-decoration: none;
