--- a/site/src/pages/Auth/Auth.module.css
+++ b/site/src/pages/Auth/Auth.module.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
   display: flex;
   flex-direction: column;
   align-content: center;
@@ -228,4 +228,4 @@
 .githubLink:hover a {
   cursor: pointer;
   opacity: 1;
-}
+} */
