--- a/site/src/pages/Auth/Auth.module.css
+++ b/site/src/pages/Auth/Auth.module.css
@@ -229,3 +229,10 @@
   cursor: pointer;
   opacity: 1;
 } */
+
+.formLabel {
+  font-size: 19px;
+  font-weight: 700;
+  margin: 0 0 10px 0;
+  color: black;
+}
